# alsylinux

./: 2020_2_v1.rar  Makefile  README.md  alsy  alsy-install  bootinst.bat  bootinst.sh  core.cfg  help.txt  initrfs.img  proj_s.rar  rc.local  readme.odp  readme_install_programs.odt  save-kde  setup  syslinux.cfg  Севастьянов Семен Владимирович(доп соглашение август).doc  доп соглашение2.rar
alsy_live_kit/: Makefile  init
alsy_live_kit/lib/: init.cfg  livekitlib
boot/: bootinst.bat  gitcommit  help.txt  ldlinux.c32  ldlinux.sys  readme.md  syslinux.cfg
boot/syslinux/: readme.md
core/: help.txt  readme.md
core/4.12.4/: readme.md  readme.txt
core/4.14.165/: alsy-patch-4.14.166  core-4.14.165.cfg
core/4.14.170/: nouveau.patch  readme.md  sound.patch  vmx.patch
core/linux-6.3.3/: minimum_config
core/patch/: aufs4-patch.tar.xz  list_changes.txt
documentation/: bash_Обработка_строк.txt  fs.list  git_command_help.txt  linux-cmd.list  readme.odp  readme.txt
etc/: group  gshadow  inittab  passwd  shadow
etc/rc.d/: git.synchron  rc.4  rc.5  rc.ConsoleKit  rc.K  rc.M  rc.alsy.init  rc.alsy_shutdown  rc.consolekit  rc.cups  rc.docbook  rc.export_profile  rc.firewall  rc.git.synchron  rc.kill_process  rc.local  rc.local.md5sum  rc.local_shutdown  rc.messagebus  rc.mount_device  rc.networkmanager  rc.polkit  rc.sudo  rc.sysctl
source/: alsy-install
source/FFmpeg-n4.2/: config.sh
source/applinux/boost_1_75_0/: Makefile  Makefile.am  Makefile.pi  config.sh
source/applinux/syslinux-6.03/: Makefile  Makefile.am  Readme.MD  config.sh  readme  syslinux.patch
(+92 files in other folders)
